# tiney

./: ALL_BUILD.vcproj  CMakeLists.txt  FindGLEW.cmake  FindGLUT.cmake  FindOpenGL.cmake  Makefile  Makefile.in  ZERO_CHECK.vcproj  main.c  main.cpp  tiney.frag  tiney.sln  tiney.vcproj  tiney.vert
