PROJECT(tiney)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}")
SET(tiney_LIBS)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLUT)
FIND_PACKAGE(GLEW)


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

IF(GLEW_FOUND)
	MESSAGE(STATUS "GLEW_INCLUDE_DIR - ${GLEW_INCLUDE_DIR}")
	MESSAGE(STATUS "GLEW_LIBRARY - ${GLEW_LIBRARY}")
	INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
	SET(tiney_LIBS ${tiney_LIBS} ${GLEW_LIBRARY} )
ENDIF(GLEW_FOUND)

IF(OPENGL_FOUND)
	MESSAGE(STATUS "OPENGL_INCLUDE_DIR - ${OPENGL_INCLUDE_DIR}")
	MESSAGE(STATUS "OPENGL_LIBRARIES - ${OPENGL_LIBRARIES}")
	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
	SET(tiney_LIBS ${tiney_LIBS} ${OPENGL_LIBRARIES} )
ENDIF(OPENGL_FOUND)

IF(GLUT_FOUND)
	MESSAGE(STATUS "GLUT_INCLUDE_DIR - ${GLUT_INCLUDE_DIR}")
	MESSAGE(STATUS "GLUT_LIBRARIES - ${GLUT_LIBRARIES}")
	INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
	SET(tiney_LIBS ${tiney_LIBS} ${GLUT_LIBRARIES} )
ENDIF(GLUT_FOUND)


SET(tiney_SRCS main.c)
SET(CMAKE_C_FLAGS "-mno-cygwin")

# actual target:
ADD_EXECUTABLE(tiney ${tiney_SRCS})
TARGET_LINK_LIBRARIES(tiney ${tiney_LIBS})
